# acex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/collection-agent/: Dockerfile  README.md  pyproject.toml
agents/collection-agent/src/acex_collection_agent/: agent.py  collector.py  main.py
agents/config-agent/: Dockerfile  README.md  pyproject.toml  switch_deps.sh
agents/config-agent/src/acex_config_agent/: __init__.py  agent.py  collector.py  main.py
agents/grafana-sync/: Dockerfile  README.md  pyproject.toml
agents/grafana-sync/src/acex_grafana_sync/: agent.py  grafana_client.py  main.py
agents/telemetry-agent/: Dockerfile  README.md  pyproject.toml
agents/telemetry-agent/src/acex_telemetry_agent/: agent.py  main.py
backend/: pyproject.toml  switch_deps.sh
backend/src/acex/: constants.py
backend/src/acex/ai_ops/: __init__.py  ai_ops.py  settings.py  web_ui_context.py
backend/src/acex/api/: api.py  auth.py
backend/src/acex/automation_engine/: automationengine.py
backend/src/acex/compilers/: compiled_logical_node.py  config_compiler.py
backend/src/acex/config_diff/: __init__.py  logical_node_diff.py
backend/src/acex/configuration/: configuration.py
backend/src/acex/credentials/: credential_manager.py  vault_client.py
backend/src/acex/device_configs/: device_config_manager.py
backend/src/acex/inventory/: __init__.py  asset_cluster_manager.py  asset_service.py  collection_agent_manager.py  config_agent_manager.py  contact_assignment_manager.py  contact_service.py  inventory.py  logical_node_service.py  node_service.py  region_assignment_manager.py  region_service.py  site_service.py  telemetry_agent_manager.py
backend/src/acex/lldp/: lldp_neighbor_manager.py
backend/src/acex/models/: __init__.py  aaa_model.py  acl_model.py  asset.py  attribute_value.py  collection_agent.py  composed_configuration.py  config_agent.py  contacts.py  credential.py  device_config.py  external_value.py  interfaces.py  lldp_neighbor.py  logging.py  logical_node.py  management_connections.py  ned.py  network_instances.py  node.py  ntp_server.py  pagination.py  physical.py  regions.py  sites.py  snmp.py  snmp2.py  spanning_tree.py  ssh_server.py  telemetry_agent.py
backend/src/acex/observability/: __init__.py  capability.py  providers.py  registry.py  settings.py
cli/: pyproject.toml  switch_acex_client_dep.sh
cli/src/acex_cli/: diff_formatters.py  main.py  output.py  print_utils.py  sdk.py
cli/src/acex_cli/commands/: asset.py  logical_node.py  ned.py  node copy.py  node.py
client/: README.md  load_models.py  models_json.json  pyproject.toml  switch_deps.sh
client/examples/: get_config.py  get_node.py  sync_neds.py
client/generate_client/: generator.py
client/src/acex/: acex.py
client/src/acex-client/: main.py
client/src/acex_client/: main.py
client/src/acex_client/acex/: acex.py  logical_nodes.py  neds.py  node_instances.py
client/src/acex_client/acex/resources/: assets.py  credentials.py  logical_nodes.py  management_connections.py  neds.py  node_instances.py  resource_base.py
client/src/acex_client/auth/: __init__.py  authorization_code.py  client_credentials.py  provider.py  token_store.py
client/src/acex_client/models/: generated_models.py  models.py
client/src/acex_client/restclient/: restclient.py
devkit/: README.md  pyproject.toml
devkit/src/acex_devkit/: __init__.py
devkit/src/acex_devkit/configdiffer/: __init__.py  command.py  configdiffer.py  diff.py  example_driver_usage.py  example_workflow.py  old_configdiffer.py  old_diff.py
devkit/src/acex_devkit/drivers/: __init__.py  base.py  base_driver.py
devkit/src/acex_devkit/exceptions/: __init__.py
devkit/src/acex_devkit/models/: __init__.py  acl_model.py  asset.py  attribute_value.py  augment.py  base.py  collection_agent.py  composed_configuration.py  contact.py  container_entry.py  container_model.py  credential.py  lldp_neighbor.py  logging.py  logical_node.py  management_connection.py  node_response.py  reference.py  region.py  site.py  spanning_tree.py
devkit/src/acex_devkit/normalizer/: __init__.py  base.py  engine.py
devkit/src/acex_devkit/types/: __init__.py
docs/examples/example1/: app.py  config_test.py
docs/examples/example12_banner/: app.py
docs/examples/example14_cisco_augments/: app.py
docs/examples/example15_auth/: app.py
docs/examples/example2/: app.py
docs/examples/example4/: app.py
docs/examples/example7_driver_discovery/: app.py
docs/examples/example8/: app.py
drivers/cisco_ios_cli/: pyproject.toml  switch_deps.sh
drivers/juniper/junos_cli/: pyproject.toml  switch_deps.sh
drivers/juniper/junos_cli/src/acex_driver_juniper_junos_cli/: augment_renderers.py  junos_cli.py  renderer.py
drivers/juniper_junos_cli/: pyproject.toml  switch_deps.sh
drivers/juniper_junos_cli/src/acex_driver_juniper_junos_cli/: junos_cli.py  parser.py  renderer.py  template.j2
mcp/: pyproject.toml
mcp/src/acex_mcp/: server.py
scripts/: dev-setup.sh  reset_dev_data.py  seed_dev_data.py  upload_backup_tool.py
scripts/configs/: node1.txt
scripts/configs/ams-dc1-core-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/ams-dc1-leaf-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/ams-dc1-leaf-2/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/ams-dc1-oob-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/sto-dc1-bdr-leaf-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/sto-dc1-core-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/sto-dc1-dist-1/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
scripts/configs/sto-dc1-dist-2/: 01_initial.conf  02_interfaces.conf  03_vlans_routing.conf
worker/: README.md  pyproject.toml
worker/src/acex_worker/: __init__.py  worker.py
(+380 files in other folders)
