[tool.poetry]
name = "acex-cli"
version = "4.1.0"
description = "ACE-X CLI - Command-line interface for ACE-X"
authors = ["Johan Lahti <johan.lahti@acebit.se>"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://github.com/acex-labs/acex"
repository = "https://github.com/acex-labs/acex"
keywords = ["automation", "cli", "control"]
packages = [
    { include = "acex_cli", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.0"
rich = "^13.0.0"
click = "8.1.7"
acex-client = { path = "../client", develop = true } # Changes to real dep. by switch_acex_client_dep for publishing
acex-driver-cisco-ioscli = { path = "../drivers/cisco_ios_cli", develop = true }
ntc-templates = "^8.1.0"

[tool.poetry.scripts]
acex = "acex_cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
