[tool.poetry]
name = "acex-client"
version = "0.0.1"
description = "ACE-X CLIENT - Client for ACE-X"
authors = ["Johan Lahti <johan.lahti@acebit.se>"]
readme = "README.md"
license = "AGPL-3.0"
keywords = ["automation", "control"]
packages = [
    { include = "acex_client", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.0"
rich = "^13.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
