[tool.poetry]
name = "acex-client"
version = "4.1.1"
description = "ACE-X CLIENT - Client for ACE-X"
authors = ["Johan Lahti <johan.lahti@acebit.se>"]
readme = "README.md"
license = "AGPL-3.0"
keywords = ["automation", "control"]
packages = [
    { include = "acex_client", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.0"
rich = "^13.0.0"
requests = "^2.32.5"
datamodel-code-generator = "^0.43.1"
pydantic = "^2.12.5"
datetime = "^6.0"
acex = { path = "../backend", develop = true }
acex-devkit = { path = "../devkit", develop = true }
acex-driver-cisco-ioscli = { path = "../drivers/cisco_ios_cli", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
