[tool.poetry]
name = "acex-worker"
version = "0.2.0"
description = "ACE-X Worker - Distributed task execution for ACE-X"
authors = ["Johan Lahti <johan.lahti@acebit.se>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/acex-labs/acex"
repository = "https://github.com/acex-labs/acex"
keywords = ["automation", "worker", "distributed", "tasks"]
packages = [
    { include = "acex_worker", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
acex = { path = "../backend", develop = true }
celery = { version = "^5.3.0", optional = true }
redis = { version = "^5.0.0", optional = true }

[tool.poetry.extras]
celery = ["celery", "redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
