[tool.poetry]
name = "acex-driver-juniper-junoscli"
version = "1.0.1"
description = "ACE-X Driver: Juniper Junos CLI"
authors = ["Johan Lahti <johan.lahti@acebit.se>"]
license = "AGPL-3.0"
homepage = "https://github.com/acex-labs/acex"
repository = "https://github.com/acex-labs/acex"

packages = [
    { include = "acex_driver_juniper_junos_cli", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
netmiko = "^4.6.0"
acex-devkit = { path = "../../devkit", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."acex.neds"]
juniper_junos_cli = "acex_driver_juniper_junos_cli.junos_cli:JunosCLI"

[dependency-groups]
dev = [
    "ipython (>=9.10.0,<10.0.0)"
]
