[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acex-juniper-junos-cli"
version = "0.1.0"
description = "Juniper Junos CLI driver for acex platform."
authors = [
    { name = "Ditt Namn", email = "din@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "../../../../LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/acex-platform/acex"
"Bug Tracker" = "https://github.com/acex-platform/acex/issues"

[tool.setuptools.packages.find]
where = ["."]
